--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -55,6 +55,9 @@
                     <li>
                         <a href="/eventos-disponibles">Próximos eventos</a>
                     </li>
+                    <li>
+                        <a href="/ebooks">Ebooks</a>
+                    </li>
                 </ul>
             </div>
         </nav>
