--- a/frontend/templates/producto.html
+++ b/frontend/templates/producto.html
@@ -71,7 +71,7 @@
             <!-- Product Information -->
             <div class="product-info-section">
                 <div class="product-header">
-                    <h1 class="product-title">{{ producto.nombre }}</h1>
+                    <h1 class="ebook-title">{{ producto.nombre }}</h1>
                     
                 </div>
 
