--- a/frontend/templates/admin_ebooks_panel.html
+++ b/frontend/templates/admin_ebooks_panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/static/img/favicon.png">
-    <title>Panel de Administración</title>
+    <title>Panel de Ebooks</title>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -16,12 +16,13 @@
     <section>
 
         <div class="container text-center mt-5">
-            <h1 class="mb-4">Panel de administración</h1>
+            <h1 class="mb-4">Panel de Ebooks</h1>
             <div class="d-grid gap-3 col-6 mx-auto">
-                <a href="/admin/eventos" class="btn btn-panel btn-lg">Eventos</a>
-                <a href="/admin/tienda-panel" class="btn btn-panel btn-lg">Tienda</a>
-                <a href="/admin/ebooks-panel" class="btn btn-panel btn-lg">Ebooks</a>                
-                <a href="/" class="btn btn-panel btn-lg">Página principal</a>
+                <a href="/admin/categorias_ebooks" class="btn btn-panel btn-lg">Categorías de ebooks</a>
+                <a href="/admin/ebooks" class="btn btn-panel btn-lg">Ebooks</a>
+                <a href="/admin/compras_ebooks" class="btn btn-panel btn-lg">Compras de ebooks</a>
+                
+                
             </div>
         </div>
 
